syntax = "proto3";
package sudhakarmamillapalli.tictactoe.tictactoe;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sudhakar-mamillapalli/tictactoe/x/tictactoe/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateGame(MsgCreateGame) returns (MsgCreateGameResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGame {
  string creator = 1;
}

message MsgCreateGameResponse {
  string gameIndex = 1;
}

// this line is used by starport scaffolding # proto/tx/message
